<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/colorBlack"
            android:textSize="23sp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/img_profile_received"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pandji"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/tv_profilename_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:layout_below="@id/img_profile_received"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_profileemail_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/tv_profilename_received"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>